testsuite/tests/rename/should_fail/T22637.hs
module T22637 where

f :: Int -> Int
f x = x

{-# INLINE f #-}
{-# NOINLINE f #-}
