testsuite/tests/rename/should_fail/T22637.stderr
T22637.hs:7:14: error: [GHC-43895]
    Conflicting pragmas for ‘f’
    Pragmas:
      INLINE at T22637.hs:6:12
      NOINLINE at T22637.hs:7:14
  |
7 | {-# NOINLINE f #-}
  |              ^
